--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <!-- <h1>Piyush Kumar</h1> -->
-      <h1>Hello, I'm Piyush</h1>
+      <h1>Hello, I'm Piyush Kumar</h1>
       <p>A <span class="typed" data-typed-items="Programmer, Tech Enthusiast"></span></p>
       <div class="social-links">
 
